--- a/aluraflix-aula8/aluraflix-aula8/index.html
+++ b/aluraflix-aula8/aluraflix-aula8/index.html
@@ -42,6 +42,15 @@
             <a href="https://www.youtube.com/watch?v=E1fYdjVksrQ">
                 <img src="https://img.youtube.com/vi/E1fYdjVksrQ/maxresdefault.jpg" />
             </a>
+            <a href="https://www.youtube.com/watch?v=BNhIxSkvspg">
+                <img src="https://img.youtube.com/vi/BNhIxSkvspg/maxresdefault.jpg" />
+            </a>
+             <a href="https://www.youtube.com/watch?v=DFa0evfX96s">
+                <img src="https://img.youtube.com/vi/DFa0evfX96s/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=bc8q4-xJYkI">
+                <img src="https://img.youtube.com/vi/bc8q4-xJYkI/maxresdefault.jpg" />
+            </a>
         </div>
     </section>
 
